@@ -233,6 +233,7 @@ importFrom(MASS,isoMDS)
 importFrom(MultiAssayExperiment,ExperimentList)
 importFrom(MultiAssayExperiment,MultiAssayExperiment)
 importFrom(MultiAssayExperiment,experiments)
+importFrom(MultiAssayExperiment,sampleMap)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
